Respuesta de payment obtenida en android

--- a/MercadoPagoCrossPlatform/MercadoPagoCrossPlatform.Android/MercadoPagoCrossPlatform.Android.csproj
+++ b/MercadoPagoCrossPlatform/MercadoPagoCrossPlatform.Android/MercadoPagoCrossPlatform.Android.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\MercadoPagoService.cs" />
+    <Compile Include="Support\Result.cs" />
   </ItemGroup>
   <ItemGroup>
     <AndroidAsset Include="Assets\fonts\Roboto-Light.ttf" />
