--- a/MercadoPagoCrossPlatform/MercadoPagoCrossPlatform.iOS/MercadoPagoCrossPlatform.iOS.csproj
+++ b/MercadoPagoCrossPlatform/MercadoPagoCrossPlatform.iOS/MercadoPagoCrossPlatform.iOS.csproj
@@ -153,6 +153,9 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>12.0.2</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.3.0.967583" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
